corrected colors to 4.5 contrast for WCAG

--- a/themes/openemr/assets/scss/_gt.scss
+++ b/themes/openemr/assets/scss/_gt.scss
@@ -29,7 +29,7 @@
         }
 
         a {
-            color: hsl(0, 100, 100);
+            color: #111111;
             &:hover {
                 text-decoration: none !important;
             }
