--- a/themes/openemr/assets/scss/_nav.scss
+++ b/themes/openemr/assets/scss/_nav.scss
@@ -32,7 +32,7 @@
     a {
         color: $white !important;
         &:hover {
-            color: lighten($blue, 50) !important;
+            color: lighten($blue, 60) !important;
         }
     }
 }
